--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.263.1",
     "next": "14.0.0",
     "next-themes": "^0.2.1",
+    "npm": "^10.2.4",
     "react": "^18",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
